--- a/env.example
+++ b/env.example
@@ -19,3 +19,9 @@ DB_DATABASE=test
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_DEBUG=2
+
+
+RABBITMQ_HOST=127.0.0.1
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
